styles/Home.module.css
.main {
  overflow: hidden; /* Prevents the star images from overflowing in mobile view */
}

.headerContainer {
  position: relative;
  height: 100vh; /* Adjusted to leave room for navbar */
  width: 100%;
}

.parallaxBackground {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 1;
}

.overlayText {
  position: absolute;
  top: 1%;
  left: 3%;
  transform: none;
  color: #fff;
  z-index: 3;
  width: auto;
}

.overlayText h1 {
  font-size: 8rem;
}

.overlayText2 {
  position: absolute;
  top: calc(
    100vh - 200px
  ); /* Hard coded 200px to get the text above the Nav component */
  left: 3%;
  transform: none;
  color: #fff;
  z-index: 3;
  width: auto;
}

.overlayText2 h4 {
  font-size: 2.5rem;
}

.imageTint {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.2);
  z-index: 2;
}

.bookNowButton {
  width: 250px;
  position: absolute;
  top: calc(100vh - 150px);
  left: calc(100vw - 200px);
  transform: translate(-50%, -50%);
  padding: 10px;
  font-size: 2rem;
  font-weight: 700;
  background-color: var(--color-primary);
  color: black;
  border: 2px solid black;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 1);
  transition: 0.2s;
  text-align: center;
  z-index: 2;
}

.bookNowButton:hover {
  background-color: var(--color-secondary);
  transition: 0.2s;
  box-shadow: none;
}

.navContainer {
  display: flex;
  justify-content: center;
  width: 100%;
  transition: background-color 2s;
  position: absolute;
  top: calc(
    100vh - 70px
  ); /* The 70px is the height of the nav element in the Nav component */
  z-index: 10;
  background-color: var(--color-primary);
}

.aboutSection {
  padding: 40px 20px;
  background: linear-gradient(to bottom, var(--color-primary) 5%, white 100%);
}

.aboutSectionWrapper {
  margin: auto;
  max-width: 1500px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.aboutSectionImage {
  flex: 1;
  max-width: 700px;
  height: auto;
  width: auto;
  border-radius: 10px;
  margin: auto;
  box-shadow: -10px 10px 20px 5px rgba(0, 0, 0, 0.1),
  10px 10px 20px 5px rgba(0, 0, 0, 0.1);
  transition: 0.2s;
}

.aboutSectionText {
  flex: 1;
  max-width: 40%;
  width: 100%;
  margin: auto;
  /*padding: 50px;*/
  padding-left: 50px;
}

.aboutSectionText h2 {
  margin-bottom: 20px;
}

.aboutSectionText p {
  line-height: 2;
  margin-bottom: 20px;
}

.sjolieSection {
  text-align: center;
  padding: 40px 20px;
  background-color: white;
}

.cycleText {
  margin: 20px 0 50px;
}

.textSection {
  padding: 20px;
  text-align: center;
  max-width: 1000px;
  margin: auto;
}

.prepSection {
  width: 100%;
  padding: 20px;
  text-align: center;
  margin: auto;
  background-color: white;
}

.prepSection h5 {
  color: var(--color-tertiary);
}

.afterCareSection {
  text-align: center;
  padding: 40px 20px 80px;
  background: linear-gradient(to bottom, white 80%, var(--color-primary) 100%);
}

.afterCareSection h5 {
  color: var(--color-tertiary);
}

.cardSection {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: auto;
  max-width: 1000px;
  z-index: 0;
}

.sunImage {
  position: absolute;
  border-radius: 5px;
  z-index: -1;
}

.sunImage1 {
  top: 0;
  left: -100px;
}
.sunImage2 {
  top: 95%;
  left: calc(100% - 100px);
}
.sunImage3 {
  top: 85%;
  left: -200px;
}

@media (max-width: 1100px) {
  .aboutSectionImage {
    max-width: 100%;
  }

  .aboutSectionText {
    max-width: 60%;
  }
}

@media (max-width: 900px) {
  .aboutSectionWrapper {
    flex-direction: column;
    text-align: center;
  }

  .aboutSectionImage {
    max-width: 100%;
  }

  .aboutSectionText {
    margin-top: 20px;
    max-width: 100%;
    padding: 10px;
  }
}

@media (max-width: 768px) {
  .headerContainer {
    height: 100vh;
  }

  .overlayText h1 {
    font-size: 5rem;
  }

  .overlayText2 {
    top: 85vh;
  }

  .overlayText2 h4 {
    font-size: 2.5rem;
  }

  .navContainer {
    position: absolute;
    justify-content: right;
    top: 0;
    background-color: transparent;
  }

  .sunImage3 {
    top: 85%;
    left: -100px;
  }
}

@media (max-width: 480px) {
  .overlayText h1 {
    font-size: 4rem;
  }

  .overlayText2 {
    top: 88vh;
  }

  .overlayText2 h4 {
    font-size: 2rem;
  }
}

@media (max-height: 300px) {
  .overlayText2 {
    display: none;
  }
}

